# DimaTech_Ltd_test

./: .flake8  .gitignore  docker-compose.yaml  pyproject.toml  readme.md
conf/: .env  __init__.py  config.py  config_sanic.py
docker/: .dockerignore  Dockerfile
fixture/billing/: billing.account.json  billing.transaction.json  billing.user.json
scripts/: load_data.py
scripts/postgres/: start.sql
scripts/web/: startup.sh
webapp/: __init__.py  server.py
webapp/api/account/: __init__.py  account.py  router.py  transaction.py
webapp/api/login/: auth.py  router.py  user.py
webapp/crud/: account.py  transaction.py  user.py
webapp/db/: postgres.py
webapp/models/: __init__.py  meta.py
webapp/models/billing/: account.py  transaction.py  user.py
webapp/schema/account/: account.py  transaction.py
webapp/schema/login/: auth.py  user.py
webapp/utils/: signature.py
webapp/utils/auth/: decorators.py  jwt.py  password.py
