[tool.black]
line-length = 120
target-version = ["py313"]
skip-string-normalization = true
exclude = '''
^/(
  (
    | \.git
    | \.venv
  )/
)
'''

[tool.isort]
line_length = 120
combine_as_imports = true
order_by_type = true
length_sort_straight = true
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
known_local_folder = ["webapp", "conf"]

[project]
name = "dimatech-ltd-test"
version = "0.1.0"
description = "backend test task"
authors = [
    {name = "Vladislav Gordin",email = "vl241095@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.*"
dependencies = [
    "sanic[ext] (>=25.3.0,<26.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "authlib (>=1.6.1,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
isort = "^6.0.1"
black = "^25.1.0"
autoflake = "^2.3.1"
flake8-black = "^0.3.6"
flake8-coding = "^1.3.2"
flake8-comprehensions = "^3.16.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.5.0"
flake8-executable = "^2.1.3"
flake8-isort = "^6.1.2"
flake8-logging-format = "^2024.24.12"
flake8-pie = "^0.16.0"
flake8-quotes = "^3.4.0"
flake8-simplify = "^0.22.0"
mypy = "^1.17.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
